third_party/move/move-compiler-v2/tests/more-v1/translated_ir_tests/move/commands/if_moves_else_doesnt.exp

Diagnostics:
error: cannot move local `x` since it is still in use
  ┌─ tests/more-v1/translated_ir_tests/move/commands/if_moves_else_doesnt.move:4:23
  │
4 │     let y = if (true) move x else 0;
  │                       ^^^^^^ attempted to move here
5 │     y;
6 │     assert!(x == 0, 42);
  │             ------ used here
